[gd_scene load_steps=8 format=3 uid="uid://bw0rhxbg2y5hf"]

[ext_resource type="Script" uid="uid://c8fida5aajb62" path="res://scripts/main.gd" id="1_jfv3b"]
[ext_resource type="Script" uid="uid://v6xxrbhcmp6j" path="res://scripts/game_control.gd" id="2_bgr0g"]
[ext_resource type="Script" uid="uid://cm2q5n1dnor2b" path="res://scripts/board.gd" id="3_ulksu"]
[ext_resource type="Script" uid="uid://cf26cgdrpdugi" path="res://scripts/scrolling_counter.gd" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://c18ky8te2qerf" path="res://scripts/multi_display.gd" id="4_tefeu"]
[ext_resource type="Texture2D" uid="uid://brvq3aidddijr" path="res://textures/number_strip.png" id="5_tefeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyhfs"]
bg_color = Color(0.815686, 0.415686, 0.847059, 0)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jfv3b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TopUIContainer" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopUIContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/TopUIContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollingCounter" type="HBoxContainer" parent="CanvasLayer/TopUIContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_tbgi4")
digit_texture = ExtResource("5_tefeu")

[node name="MultiContainer" type="VBoxContainer" parent="CanvasLayer/TopUIContainer/HBoxContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="CanvasLayer/TopUIContainer/HBoxContainer/MultiContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/TopUIContainer/HBoxContainer/MultiContainer"]
layout_mode = 2

[node name="MultiDisplay" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer/MultiContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[font_size=24]1X[/font_size]"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("4_tefeu")

[node name="MultiEffectLabel" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer/MultiContainer/PanelContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
bbcode_enabled = true
autowrap_mode = 0

[node name="Panel" type="Panel" parent="CanvasLayer/TopUIContainer/HBoxContainer/MultiContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopUIContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="CanvasLayer/TopUIContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TurnsLeftLabel" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
bbcode_enabled = true
text = "[font_size=42][center][color=green ]23[/color][/center][/font_size]"
autowrap_mode = 0

[node name="Panel" type="Panel" parent="CanvasLayer/TopUIContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/TopUIContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopUIContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Turns Left: "
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
bbcode_enabled = true
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/TopUIContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "To Beat: "
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/TopUIContainer/HBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
bbcode_enabled = true
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameControl" type="Node" parent="."]
script = ExtResource("2_bgr0g")

[node name="ViewportPanelContainer" type="PanelContainer" parent="GameControl"]
unique_name_in_owner = true
offset_right = 512.0
offset_bottom = 512.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jyhfs")

[node name="TextureRect" type="TextureRect" parent="GameControl/ViewportPanelContainer"]
layout_mode = 2

[node name="BoardViewportContainer" type="SubViewportContainer" parent="GameControl/ViewportPanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BoardSubViewport" type="SubViewport" parent="GameControl/ViewportPanelContainer/BoardViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
render_target_update_mode = 4

[node name="BoardCamera" type="Camera2D" parent="GameControl/ViewportPanelContainer/BoardViewportContainer/BoardSubViewport"]
unique_name_in_owner = true
ignore_rotation = false

[node name="Board" type="Node2D" parent="GameControl/ViewportPanelContainer/BoardViewportContainer/BoardSubViewport"]
unique_name_in_owner = true
script = ExtResource("3_ulksu")
